--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/dbopandji/automation_api_javascript/issues"
   },
-  "homepage": "https://github.com/dbopandji/automation_api_javascript#readme"
+  "homepage": "https://github.com/dbopandji/automation_api_javascript#readme",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2",
+    "supertest": "^6.1.6"
+  }
 }
