--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning automation api js",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -t 10000 api/**"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dbopandji/automation_api_javascript#readme",
   "devDependencies": {
     "chai": "^4.3.4",
+    "chai-json-schema": "^1.5.1",
     "mocha": "^9.1.2",
     "supertest": "^6.1.6"
   }
